# claude-file-converter

./: .gitattributes  .gitignore  app.py  config.py  create_directories.bat  development.db  init_db.py  pyproject.toml  requirements.txt
.wslvenv/: pyvenv.cfg
models/: __init__.py  conversion.py  user.py
routes/: api_routes.py  auth_routes.py  conversion_routes.py  pdf_routes.py
services/: audio_service.py  document_service.py  image_service.py  ocr_service.py  pdf_service.py
static/css/: dark-theme.css  styles.css
static/js/: file-upload.js  global-form-handler.js  theme-toggle.js  ui-controls.js
tasks/: processing_tasks.py
templates/: api_docs.html  base.html  batch.html  dashboard.html  history.html  index.html  login.html  signup.html
templates/components/: feature_notice.html
templates/convert/: audio.html  document.html  general.html  image.html
templates/errors/: 404.html  500.html
templates/pdf/: compress.html  dashboard.html  merge.html  split.html
tests/: test_pdf_service.py
utils/: feature_detector.py  file_utils.py
